--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
   },
   "homepage": "https://github.com/Paidify/authentication-service#readme",
   "dependencies": {
-    "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "node-fetch": "^3.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
